
=======================================================
            WanT code:  Log of Changes 
=======================================================

22 Apr 2005      Overlap_extract updated with the use of blas in matrix 
                 multiplications. Overlap_update routine added (blas used). (AF)

20 Apr 2005      "Habemus restartem" in disentangle (read/write) and the write procedure
                 is also implemented in wannier. Some cleaning in wannier and some
                 output format changes. Changes also in the input parameters and namelists. 
                 Tests updated. (AF)

17 Apr 2005      overlaps and projections variables (= "from_scratch" or "from_file") 
                 added to input in order to used previously saved data. Control
                 module and Input routines updated.
                 Wfc_manager module hardly changed in order to allow for this feature. 
                 (AF)

16 Apr 2005      The same speedup procedure applied to zmatrix has been used for komegai.
                 In particular we adjusted some loops and introduce the use of BLAS for
                 a matrix triple product. Interface of komegai generalized in order to
                 account also for lambda_avg which has been eliminated from CVS. (AF) 

15 Apr 2005      Zmatrix routine found to be the most time consuming part in the
                 iteration loop of disentangle. Completely rewritten, time down of a factor
                 10 in test4 (but expected to be also better for large systems).
                 CM renamed as Mkb everywhere; disentangle loop changed in order to be
                 more readable. (AF)

01 Apr 2005      Mkb symmetrization performed. Some updates in bshells and util module.
                 README.input syncronized to the current input format.
                 Collinear spin polarization allowed in WanT calculation. Test7 added
                 in order to manage spin problems. (AF)
