@@ -24,8 +24,8 @@
 #================================================================
 #
 
-DFT_BIN=/sp4/userinfm/cmpmopz3/espresso/bin
-TMPDIR=/scratch/cmpmopz3/Andrea/Test/WanT
+DFT_BIN=/home/ferretti/espresso/bin
+TMPDIR=/home/ferretti/scratch/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX=
